--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "blurhash": "^2.0.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.2",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "sass": "^1.63.6"
   }
 }
