--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
+    "@supabase/supabase-js": "^2.26.0",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "blurhash": "^2.0.5",
+    "cli": "^1.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-blurhash": "^0.3.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.2",
     "tailwind-merge": "^1.13.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "supabase": "^1.75.3"
   }
 }
