--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "sass": "^1.63.6",
     "supabase": "^1.75.3"
